@@ -46,13 +46,7 @@ if ($query =~ s/^\w+://) {
     print "<form action='file://$0' method='POST'>\n";
     print "<input type='hidden' name='cookie' value='$local_cookie'>\n";
     print "<table>\n";
-    if ($opt{'from'}) {
-	$v = &lang_html_quote($opt{'from'});
-	print "<tr><td>From:<td>$v\n";
-	print "<input type='hidden' name='from' value=\"$v\">\n";
-	delete $opt{'from'};
-    }
-    foreach $h ('to', 'cc', 'bcc', 'subject') {
+    foreach $h ('from', 'to', 'cc', 'bcc', 'subject') {
 	$v = &lang_html_quote($opt{$h});
 	print "<tr><td>\u$h:<td><input type='text' name=\"$h\" value=\"$v\">\n";
 	delete $opt{$h};
@@ -132,12 +126,7 @@ if ($query =~ s/^\w+://) {
 	print "<input type='submit' name='action' value='Send'>\n";
 	print "<hr>\n";
 	print "<table>\n";
-	if ($opt{'from'}) {
-	    print "<tr><td>From:<td>$v{'from'}\n";
-	    print "<input type='hidden' name='from' value=\"$v{'from'}\">\n";
-	    delete $opt{'from'};
-	}
-	foreach $h ('to', 'cc', 'bcc', 'subject') {
+	foreach $h ('from', 'to', 'cc', 'bcc', 'subject') {
 	    print "<tr><td>\u$h:<td><input type='text' name=\"$h\" value=\"$v{$h}\">\n";
 	    delete $opt{$h};
 	}
@@ -160,6 +149,10 @@ if ($query =~ s/^\w+://) {
 	print "<input type='submit' name='action' value='Preview'><br>\n";
 	print "</body></html>\n";
     } else {
+# XXX: quote?
+#	if ($opt{'from'}) {
+#	    $sendmail_fromopt = '-f' . $opt{'from'};
+#	}
 	unless (open(MAIL, "|$SENDMAIL $SENDMAIL_OPT")) {
 	    print "Content-Type: text/html\r\n";
 	    print "\r\n";
